<resources>
    <string name="app_name">U3IMCApp</string>
    <string name="titulo_app">Indice de Masa Corporal</string>
    <string name="peso">Peso(kg):</string>
    <string name="estatura">Estatura(m):</string>
    <string name="btn_calcular">Calcular IMC</string>
    <string name="btn_acerca_de">Acerca de...</string>
    <string name="instituto">Instituto Tecnológico de la Laguna</string>
    <string name="appname_ver">U3IMCApp  V1.0</string>
    <string name="fecha_creacion">Septiembre 2023</string>
    <string name="btn_atras">ATRAS</string>
    <string name="salud_es">, su condicion de salud es:</string>
    <string name="imc_es">IMC=</string>
    <string name="alert_title">IMCApp</string>
    <string name="delgadez_muy_severa">Delgadez Muy Severa</string>
    <string name="delgadez_severa">Delgadez Severa</string>
    <string name="delgadez">Delgadez</string>
    <string name="peso_saludable">Peso Saludable</string>
    <string name="sobrepeso">Sobrepeso</string>
    <string name="obesidad_severa">Obesidad Severa</string>
    <string name="obesidad_morbida">Obesidad Muy Severa (Obesidad Mórbida)</string>
    <string name="obesidad_moderada">Obesidad Moderada</string>
    <string name="aceptar">Aceptar</string>
</resources>